code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_74.wast
(assert_invalid
  (module (func $type-if-value-num-vs-num-in-dead-body (result i32)
    (if (result i32) (i32.const 0) (then (f32.const 0)))
  ))
  "type mismatch"
)